# earthquake-damage-ml

./: .gitignore  .pre-commit-config.yaml  Gradient_Boosting (1).ipynb  Gradient_Boosting.ipynb  Label encoding beispiel  Makefile  README.md  compare_datasets.ipynb  data_understanding.ipynb  pyproject.toml  random_forest.ipynb  random_forest_v1.ipynb  random_forest_v2.ipynb  random_forest_v3.ipynb  studienarbeit_random_forest_v1.ipynb  studienarbeit_random_forest_v2.ipynb  submission.csv  submission_rf.csv  submission_xgboost.csv  xgboost.ipynb
.dvc/: config
Dataset Original/: csv_building_ownership_and_use.csv
data/: interim.dvc  raw.dvc
docs/: mkdocs.yml
earthquake-damage-ml/: LICENSE
earthquake-damage-ml/docs/docs/: index.md
earthquake-damage-ml/earthquake_damage_ml/: __init__.py  dataset.py  features.py
earthquake-damage-ml/models/: submission_xgboost.csv
earthquake_damage_ml/: plots.py
earthquake_damage_ml/modeling/: predict.py  train.py
models/: submission_rf.csv  submission_rf_test.csv  submission_xgb_test.csv
notebooks/: data_understanding copy.ipynb  data_understanding.ipynb  random_forest.ipynb  xgboost.ipynb
src/: dataset.py  preprocess.py
src/modeling/: predict.py  train.py
