[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "earthquake_damage_ml"
version = "0.0.1"
description = "Predicting building damage levels after the 2015 Gorkha Earthquake using ML"
authors = [
  { name = "Joscha Hillienhoff" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = ">=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["earthquake_damage_ml"]
force_sort_within_sections = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
nbstripout = "^0.8.1"

